packages/section/src/section.pcss
@import url("@sikt/sds-tokens/dist/css/custom-media.css");

.sds-section {
  display: flex;
  flex-direction: column;

  &__header {
    border-bottom: var(--sds-space-border-weight-regular) solid
      var(--sds-color-layout-divider-subtle);
    display: flex;
    flex-direction: column;
    gap: var(--sds-space-gap-medium);
    padding-bottom: var(--sds-space-gap-large);
  }

  &__cta {
    display: flex;
    justify-content: flex-end;
  }

  &__content {
    padding-top: var(--sds-space-gap-large);
  }

  @media (--sds-base-breakpoint-tablet) {
    &__header {
      align-items: center;
      flex-direction: row;
      justify-content: space-between;
    }
  }
}

